# Askua

./: .editorconfig  .gitignore  1  Cargo.toml  Makefile  README.md  askua.dtb  askua.dts  include.mk  rustfmt.toml  rv64.ld
.cargo/: config.toml
LuckyOS/: Makefile  include.mk
LuckyOS/boot/: pre_heap.c  pre_mm.c
LuckyOS/dev/: plic.c  uart.c
LuckyOS/include/: printk.h  process.h  sbicall.h  smp.h  syscall.h  trap.h  types.h  wait.h
LuckyOS/lib/: sbi.c
LuckyOS/mm/: mmap.c  raw_heap.c
LuckyOS/trap/: exc_entry.S
LuckyOS/virtio/: blk.c
boot/: init.c  pre_heap.c  pre_mm.c  start.S
cfg/: aarch64.json  rv64.json
dev/: plic.c  rtc.c  uart.c
fs/: Makefile  dentry.c  fs.c
fs/ext4/: test_file
include/: atomic.h  errors.h  list.h  printk.h  sbicall.h  smp.h  trap.h  trapframe.h  types.h
include/asm/: barrier.h  csr.h
include/dev/: plic.h  rtc.h  uart.h
include/fs/: dentry.h  fat.h  fs.h  inode.h
include/lib/: elf.h  print.h  string.h
include/lock/: mutex.h  rwlock.h  spinlock.h
include/mm/: mm.h  mmu.h  page.h  pgtable.h
include/proc/: task.h
include/virtio/: virtio.h  virtio_blk.h  virtio_net.h  virtio_pci.h  virtq.h
kernel/: lib.rs  main.rs  printk.c
kernel/arch/: mod.rs
kernel/driver/: fdt.rs  mod.rs
kernel/fs/: buffer.rs  mod.rs
kernel/klib/: mod.rs
kernel/lock/: mod.rs  spin.rs
kernel/log/: mod.rs
kernel/mm/: address.rs  mod.rs  page.rs  table.rs
kernel/proc/: mod.rs
lds/: rv64.ld
lib/: Makefile  print.c  sbi.c  string.c
mm/: buddy.c  mm.c  mmap.c  page.c  raw.c  raw_heap.c
trap/: trap.c
virtio/: blk.c
(+102 files in other folders)
